--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "firebase emulators:exec \"jest --forceExit\"",
+    "test:watch": "firebase emulators:exec \"jest --watch\"",
+    "test:snapshot": "firebase emulators:exec \"jest --forceExit --updateSnapshot\"",
+    "test:coverage": "firebase emulators:exec \"jest --forceExit --coverage\"",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "percy": "percy exec -- npm run cy:run",
@@ -18,7 +20,10 @@
   },
   "author": "",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "firebase": "^8.6.8",
+    "firebase-admin": "^9.9.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.5",
@@ -50,6 +55,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
+    "firebase-functions": "^3.14.1",
+    "firebase-functions-test": "^0.3.0",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
