--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dialog-polyfill": "^0.5.6",
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0"
   },
