feat(firebase): Added guest login

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "percy": "percy exec -- npm run cy:run",
-    "start": "webpack serve --config webpack.js --mode development --progress --devtool hidden-nosources-source-map",
-    "start:serve": "serve -s ./dist",
+    "start": "firebase emulators:exec  \"webpack serve --config webpack.js --progress --devtool hidden-nosources-source-map\"",
+    "serve": "firebase emulators:start",
     "build": "webpack --config webpack.js --mode production",
     "lint:js": "eslint src/ --fix",
     "lint:css": "stylelint --fix src/**/*.css",
