--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "dialog-polyfill": "^0.5.6",
     "firebase": "^8.6.8",
-    "firebase-admin": "^9.9.0"
+    "firebase-admin": "^9.9.0",
+    "focus-visible": "^5.2.0",
+    "lodash.debounce": "^4.0.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
