BREAKING CHANGE: Upgraded dependencies + Migrate to Firebase 9 + Tree shaking

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,6 +8,8 @@
       "custom-properties",
       "declarations"
     ],
-    "order/properties-alphabetical-order": true
+    "order/properties-alphabetical-order": true,
+    "selector-class-pattern": "^[a-z][a-z0-9_-]+$",
+    "custom-property-pattern": null
   }
 }
