--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "percy": "percy exec -- npm run cy:run",
-    "start": "firebase emulators:exec  \"webpack serve --config webpack.js --progress --devtool hidden-nosources-source-map\"",
+    "start": "firebase emulators:exec  \"webpack serve --config webpack.js --progress --devtool hidden-nosources-source-map --mode development\"",
     "serve": "firebase emulators:start",
     "build": "webpack --config webpack.js --mode production",
     "lint:js": "eslint src/ --fix",
@@ -22,25 +22,27 @@
   "license": "MIT",
   "dependencies": {
     "dialog-polyfill": "^0.5.6",
-    "firebase": "^8.6.8",
-    "firebase-admin": "^9.9.0",
+    "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
     "focus-visible": "^5.2.0",
     "lodash.debounce": "^4.0.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.14.5",
     "@babel/eslint-plugin": "^7.14.5",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.5",
-    "@firebase/rules-unit-testing": "^1.3.8",
+    "@babel/preset-env": "^7.16.11",
+    "@firebase/rules-unit-testing": "^2.0.2",
     "@percy/cli": "^1.0.0-beta.58",
     "@percy/cypress": "^3.1.0",
     "@vue/preload-webpack-plugin": "^2.0.0",
-    "babel-jest": "^27.0.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
+    "autoprefixer": "^10.4.4",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -52,35 +54,34 @@
     "cypress": "^7.6.0",
     "cypress-file-upload": "^5.0.8",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.28.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "firebase-functions": "^3.14.1",
-    "firebase-functions-test": "^0.3.0",
+    "firebase-functions": "^3.20.0",
+    "firebase-functions-test": "^0.3.3",
     "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
-    "jest": "^27.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^11.0.0",
-    "mini-css-extract-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.3.5",
-    "postcss-loader": "^5.3.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "serve": "^11.3.2",
+    "serve": "^13.0.2",
     "sonarqube-scanner": "^2.8.1",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
+    "stylelint": "^14.6.1",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-order": "^5.0.0",
+    "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.39.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.8.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
@@ -117,6 +118,7 @@
     }
   },
   "engines": {
-    "node": "^14.15.0"
-  }
+    "node": "16"
+  },
+  "side-effects": false
 }
